aks-deployment/essedum-ingress-with-minio.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: essedum-ingress
  namespace: aipns
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
spec:
  ingressClassName: nginx
  rules:
  - host: lfn.essedum.anuket.iol.unh.edu
    http:
      paths:
      - path: /minio(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio-service
            port:
              number: 9000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: essedum-ui-service
            port:
              number: 8084
  tls:
  - hosts:
    - lfn.essedum.anuket.iol.unh.edu
    secretName: essedum-secret
